Use an italic font for symbolic links

BUG: 298218
FIXED-IN: 4.9.0